# Kaleidoscope

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Main.cpp  README.md  README.org  avg.kd  build.sh  codegen.cpp  kpp.cpp  lexer.cpp  main.cpp  parser.cpp  runtime.cpp
demo/: factorial-main.cpp  factorial.kd  fib-main.cpp  fib.kd  fibi.kd  for-main.cpp  for.kd  mandel.kd  ops.kd  set.kd  std.kd  test.kd
include/: AST.h  codegen.h  kpp.h  lexer.h  location.h  parser.h
